# SFML-Chess-Engine

./: CMakeLists.txt  CMakePresets.json  README.md  README.txt
include/: AIController.h  Assets.h  Bishop.h  Board.h  BoardStack.h  Button.h  Controller.h  FenAlgorithm.h  GameManager.h  GameState.h  IGenerate.h  IObservable.h  IObserver.h  King.h  Knight.h  MainMenuState.h  MenuState.h  NBoard.h  OpeningBook.h  Pawn.h  PieceFactory.h  PieceLogic.h  Pieces.h  PiecesFactory.h  PlayMenuState.h  PlayerController.h  PlayerXPromotionState.h  PlayerXTurnState.h  PromotionBox.h  PuzzleController.h  PuzzleManager.h  Queen.h  Rock.h  Rook.h  SFMLBoard.h  SFMLPiece.h  SFMLPieceFactory.h  SpecialMove.h  StateMachine.h  TestAI.h  (+2 more)
include/ButtonCommand/: BackToMenuCommand.h  ButtonCommand.h  ChangeGameStateCommand.h  ExitCommand.h  NextPuzzleCommand.h  NextStateCommand.h  PVPCommand.h  PuzzleCommand.h  RematchCommand.h  UndoPuzzleCommand.h  VBlackAICommand.h  VWhiteAICommand.h
include/ChessLogic/: BoardStack.h  FenAlgorithm.h  IGenerate.h  NBoard.h  OpeningBook.h  PieceLogic.h
include/Controllers/: AIController.h  (+4 more)
resources/: CMakeLists.txt  GameHistory.txt  Puzzle.txt  PuzzleBlack.txt  PuzzleWhite.txt  games_base.txt
src/: AIController.cpp  Assets.cpp  Bishop.cpp  Board.cpp  BoardStack.cpp  Button.cpp  FenAlgorithm.cpp  GameManager.cpp  GameState.cpp  IGenerate.cpp  IObservable.cpp  IObserver.cpp  King.cpp  Knight.cpp  MainMenuState.cpp  NBoard.cpp  OpeningBook.cpp  PIECEFACTORY.CPP  Pawn.cpp  PieceLogic.cpp  Pieces.cpp  PiecesFactory.cpp  PlayMenuState.cpp  PlayerController.cpp  PlayerXPromotionState.cpp  PlayerXTurnState.cpp  PromotionBox.cpp  PuzzleController.cpp  PuzzleGameState.cpp  PuzzleManager.cpp  Queen.cpp  Rock.cpp  Rook.cpp  SFMLBoard.cpp  SFMLPiece.cpp  SFMLPieceFactory.cpp  SpecialMove.cpp  StateMachine.cpp  TestAI.cpp  Tile.cpp  (+1 more)
(+99 files in other folders)
